fix:chatbot message no-wrap

--- a/src/app/pages/feed/feed.component.scss
+++ b/src/app/pages/feed/feed.component.scss
@@ -96,7 +96,6 @@
 
 .message {
   display: flex;
-  flex-wrap: wrap;
   align-items: start;
   gap: 8px;
   font-size: 16px;
